# Sequel

./: Cargo.toml  README.md  WhatShouldTheDBDo.md  build.rs  mergejoin.txt  page.md  patchnotes.md
cli/: Cargo.toml
cli/src/: main.rs
data/Sample Table/: syscat.txt
data/filtered Sample Table/: syscat.txt
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
lib/src/backend/: err.rs
lib/src/backend/access/catalog/: mod.rs  syscat.rs
lib/src/backend/access/data/: mod.rs  page.rs  value.rs
lib/src/backend/access/index/: bplus_tree.rs  mod.rs
lib/src/backend/display/: cli.rs
lib/src/backend/table/: mod.rs
lib/src/backend/table/mainmem/: table.rs
lib/src/backend/utils/: files.rs
src/: config.rs  lib.rs  main.rs  temp.rs
src/access/: locations.rs  mod.rs
src/access/data/: mod.rs  page.rs  record.rs  syscat.rs  value.rs
src/access/index/: bitmap.rs  mod.rs
src/admin_utils/: mod.rs
src/backend/: mod.rs
src/backend/access/: locations.rs  mod.rs
src/backend/access/catalog/: mod.rs  syscat.rs
src/backend/access/data/: mod.rs  page.rs  record.rs  value.rs
src/backend/access/index/: bitmap.rs
src/backend/display/: cli.rs
src/backend/table/: mod.rs
src/backend/table/mainmem/: table.rs
src/backend/table/ram/: table.rs
src/backend/utils/: binary.rs  files.rs  mod.rs
src/log/: log_recorder.rs  mod.rs
src/query_processor/: query.rs
src/structures/: column.rs  db_err.rs  filter.rs  mod.rs  modify_where.rs  sort.rs  table.rs
src/structures/relation/: crud.rs  display.rs  filter.rs  io.rs  join.rs  mod.rs  search.rs  sort.rs  table.rs  utils.rs
src/table/: mod.rs
src/table/crud/: create.rs  read.rs
tests/table/: mod.rs  modify.rs
