[package]
name = "sequel"
version = "0.2.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
dirs = "5.0.1"


[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
comfy-table = "7.1.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
url = "2.2"
bplustree = "0.1"